--- a/src/Api/Store.User.Api.csproj
+++ b/src/Api/Store.User.Api.csproj
@@ -22,7 +22,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Store.Frameworks.Core\Store.Frameworks.Core.csproj" />
     <ProjectReference Include="..\Application\Store.User.Application.csproj" />
+    <ProjectReference Include="..\CrossCutting\Store.User.Infrastructure.CrossCutting.csproj" />
     <ProjectReference Include="..\Infrastructure\Store.User.Infrastructure.Data.csproj" />
   </ItemGroup>
 
