--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -12,7 +12,7 @@
       "SecretJwtKey": "YjA2Nzk0MmJjMTUyNDgyNThhY2NmOWNlNmZkMDg2NDFhdXRodGVzdGU=",
       "ExpirationInMinutes": 60,
       "WriteRoles": [ "Admin" ],
-      "ReadRoles": [ "Standard", "Admin", "Guest" ]
+      "ReadRoles": [ "User", "Admin" ]
     },
     "RedisConfiguration": {
       "Server": "127.0.0.1,6379",
