implementado EF, GenericRepository e refatorado codigo

--- a/src/Core/Store.Framework.Core.csproj
+++ b/src/Core/Store.Framework.Core.csproj
@@ -10,10 +10,7 @@
     <PackageReference Include="AutoMapper" Version="14.0.0" />
     <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.3.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Infrastructure\Store.User.Infrastructure.Data.csproj" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
   </ItemGroup>
 
 </Project>
