--- a/src/Domain/Store.User.Domain.csproj
+++ b/src/Domain/Store.User.Domain.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Core\Store.Framework.Core.csproj" />
+  </ItemGroup>
+
 </Project>
