feat: iniciado documentacao

--- a/src/Application/Store.User.Application.csproj
+++ b/src/Application/Store.User.Application.csproj
@@ -5,6 +5,8 @@
     <RootNamespace>Store.User.Application</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <DocumentationFile>D:\Projetos-pessoais\Fatec.Store\Store.User.Api\src\Api\Swagger\application.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
