feat: implementado envio do codigo de recuperação de senha por email

--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -6,6 +6,21 @@
     }
   },
   "AppsettingsConfigurations": {
+    "EmailConfiguration": {
+      "EmailTemplates": [
+        {
+          "Type": "RecoveryPassword",
+          "Subject": "Recuperação de senha",
+          "Body": "Seu código para recuperação de senha é: {0}"
+        }
+      ],
+      "FromMail": "fatec.store2025@gmail.com",
+      "FromMailPassword": "hvkmxsqkzvjnmlim", //LabEngSoft
+      "SmtpServer": "smtp.gmail.com",
+      "SmtpPort": 587,
+      "SmtpUsername": "",
+      "SmtpPassword": ""
+    },
     "JwtConfiguration": {
       "Audience": "TesteAudience",
       "Issuer": "TesteIssuer",
