ajustado docker compose

--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -30,10 +30,10 @@
       "ReadRoles": [ "User", "Admin" ]
     },
     "RedisConfiguration": {
-      "Server": "127.0.0.1,6379",
+      "Server": "redis,6379",
       "ExpirationInMinutes": 60
     },
-    "Database": "Data Source=127.0.0.1,1433;Initial Catalog=Store;User ID=SA;Password=*SQLestudo2024;Encrypt=False;TrustServerCertificate=False;Connection Timeout=30;"
+    "Database": "Server=sqlserver,1433;Initial Catalog=Store;User ID=SA;Password=*SQLestudo2024;Encrypt=False;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AllowedHosts": "*"
 }
