criado service para execução de migration automaticamente

--- a/src/Application/Store.User.Application.csproj
+++ b/src/Application/Store.User.Application.csproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ProjectReference Include="..\CrossCutting\Store.User.Infrastructure.CrossCutting.csproj" />
     <ProjectReference Include="..\Domain\Store.User.Domain.csproj" />
+    <ProjectReference Include="..\Infrastructure\Store.User.Infrastructure.Data.csproj" />
   </ItemGroup>
 
 </Project>
