ajustado estrutura de pastas

--- a/src/Domain/Store.User.Domain.csproj
+++ b/src/Domain/Store.User.Domain.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Fatec.Store.Framework.Core\Core\Store.Framework.Core.csproj" />
     <ProjectReference Include="..\Core\Store.Framework.Core.csproj" />
   </ItemGroup>
 
