--- a/deployment/docker-compose.yaml
+++ b/deployment/docker-compose.yaml
@@ -26,7 +26,7 @@ services:
       - app-network
 
   user-api:
-    image: fatecstore/user-api:20250405.13
+    image: fatecstore/user-api:20250406.1
     container_name: user-api
     ports:
       - "8080:8080"
@@ -57,6 +57,17 @@ services:
     depends_on:
       - sqlserver
       - redis
+    networks:
+      - app-network
+
+  store-web:
+    image: fatecstore/web:latest
+    container_name: products-api
+    depends_on:
+      - sqlserver
+      - redis
+      - products-api
+      - user-api 
     networks:
       - app-network
 
