atualizado docker compose e criado docker compose para ambiente de desenvolvimento

--- a/deployment/dev-docker-compose (2).yaml
+++ b/deployment/dev-docker-compose (2).yaml
@@ -1,6 +1,19 @@
 version: '3.8'
 
 services:
+  sqlserver:
+    image: mcr.microsoft.com/mssql/server:2022-latest
+    container_name: sqlserver_container
+    environment:
+      SA_PASSWORD: "SQLestudo2024"
+      ACCEPT_EULA: "Y"
+    ports:
+      - "1433:1433"
+    volumes:
+      - sqlserver_data:/var/opt/mssql
+    networks:
+      - app-network
+
   redis:
     image: redis:latest
     container_name: redis_container
@@ -19,14 +32,15 @@ services:
       - "8080:8080"
     environment:
       - AppsettingsConfigurations__EmailConfiguration__FromMail=fatec.store2025@gmail.com
-      - AppsettingsConfigurations__EmailConfiguration__FromMailPassword=hvkmxsqkzvjnmlim
+      - AppsettingsConfigurations__EmailConfiguration__FromMailPassword=lpsnyviaqvfzaywb
       - AppsettingsConfigurations__JwtConfiguration__Audience=TesteAudience
       - AppsettingsConfigurations__JwtConfiguration__Issuer=TesteIssuer
       - AppsettingsConfigurations__JwtConfiguration__SecretJwtKey=YjA2Nzk0MmJjMTUyNDgyNThhY2NmOWNlNmZkMDg2NDFhdXRodGVzdGU=
       - AppsettingsConfigurations__RedisConfiguration__ExpirationInMinutes=60
       - AppsettingsConfigurations__RedisConfiguration__Server=redis:6379
-      - AppsettingsConfigurations__Database=Server=store.cdgy200a0n54.sa-east-1.rds.amazonaws.com,1433;Initial Catalog=Store;User ID=SA;Password=*SQLestudo2024;Encrypt=False;TrustServerCertificate=False;Connection Timeout=30;
+      - AppsettingsConfigurations__Database=Server=sqlserver,1433;Initial Catalog=Store;User ID=SA;Password=*SQLestudo2024;Encrypt=False;TrustServerCertificate=False;Connection Timeout=30;
     depends_on:
+      - sqlserver
       - redis
     networks:
       - app-network
@@ -37,8 +51,9 @@ services:
     ports:
       - "8081:8080"
     environment:
-      - ConnectionStrings__DefaultConnection=Server=store.cdgy200a0n54.sa-east-1.rds.amazonaws.com,1433;Initial Catalog=Store;User ID=SA;Password=*SQLestudo2024;Encrypt=False;TrustServerCertificate=False;Connection Timeout=30;
+      - ConnectionStrings__DefaultConnection=Server=sqlserver,1433;Initial Catalog=Store;User ID=SA;Password=*SQLestudo2024;Encrypt=False;TrustServerCertificate=False;Connection Timeout=30;
     depends_on:
+      - sqlserver
       - redis
     networks:
       - app-network
@@ -49,8 +64,9 @@ services:
     ports:
       - "8082:8080"
     environment:
-      - ConnectionStrings__DefaultConnection=Server=store.cdgy200a0n54.sa-east-1.rds.amazonaws.com,1433;Initial Catalog=Store;User ID=SA;Password=*SQLestudo2024;Encrypt=False;TrustServerCertificate=False;Connection Timeout=30;
+      - ConnectionStrings__DefaultConnection=Server=sqlserver,1433;Initial Catalog=Store;User ID=SA;Password=*SQLestudo2024;Encrypt=False;TrustServerCertificate=False;Connection Timeout=30;
     depends_on:
+      - sqlserver
       - redis
     networks:
       - app-network
@@ -65,6 +81,7 @@ services:
       - app-network
 
 volumes:
+  sqlserver_data:
   redis_data:
 
 networks:
