--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -15,7 +15,7 @@
         }
       ],
       "FromMail": "fatec.store2025@gmail.com",
-      "FromMailPassword": "hvkmxsqkzvjnmlim", //LabEngSoft
+      "FromMailPassword": "lpsnyviaqvfzaywb",
       "SmtpServer": "smtp.gmail.com",
       "SmtpPort": 587,
       "SmtpUsername": "",
