--- a/src/Domain/Fatec.Store.User.Domain.csproj
+++ b/src/Domain/Fatec.Store.User.Domain.csproj
@@ -2,12 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
+    <RootNamespace>Fatec.Store.User.Domain</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Core\Store.Framework.Core.csproj" />
+    <ProjectReference Include="..\..\..\Fatec.Store.Framework.Core\Core\Fatec.Store.Framework.Core.csproj" />
   </ItemGroup>
 
 </Project>
