--- a/src/Application/Fatec.Store.User.Application.csproj
+++ b/src/Application/Fatec.Store.User.Application.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>Store.User.Application</RootNamespace>
+    <RootNamespace>Fatec.Store.User.Application</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <GenerateDocumentationFile>False</GenerateDocumentationFile>
@@ -19,9 +19,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CrossCutting\Store.User.Infrastructure.CrossCutting.csproj" />
-    <ProjectReference Include="..\Domain\Store.User.Domain.csproj" />
-    <ProjectReference Include="..\Infrastructure\Store.User.Infrastructure.Data.csproj" />
+    <ProjectReference Include="..\CrossCutting\Fatec.Store.User.Infrastructure.CrossCutting.csproj" />
+    <ProjectReference Include="..\Domain\Fatec.Store.User.Domain.csproj" />
+    <ProjectReference Include="..\Infrastructure\Fatec.Store.User.Infrastructure.Data.csproj" />
   </ItemGroup>
 
 </Project>
