--- a/src/Infrastructure/Fatec.Store.User.Infrastructure.Data.csproj
+++ b/src/Infrastructure/Fatec.Store.User.Infrastructure.Data.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Domain\Store.User.Domain.csproj" />
+    <ProjectReference Include="..\Domain\Fatec.Store.User.Domain.csproj" />
   </ItemGroup>
 
 </Project>
