--- a/src/Domain/Fatec.Store.User.Domain.csproj
+++ b/src/Domain/Fatec.Store.User.Domain.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Fatec.Store.Framework.Core\Core\Fatec.Store.Framework.Core.csproj" />
+    <PackageReference Include="Fatec.Store.Framework.Core" Version="1.0.1" />
   </ItemGroup>
 
 </Project>
