--- a/src/2.Application/Store.Application.csproj
+++ b/src/2.Application/Store.Application.csproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>Fatec.Store.User.Application</RootNamespace>
+    <RootNamespace>Store.Application</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <GenerateDocumentationFile>False</GenerateDocumentationFile>
-    <DocumentationFile>D:\Projetos-pessoais\Fatec.Store\Store.User.Api\src\Api\Swagger\application.xml</DocumentationFile>
+    <DocumentationFile>D:\Projetos-pessoais\Store\Store.Api\src\Api\Swagger\application.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -19,9 +19,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CrossCutting\Fatec.Store.User.Infrastructure.CrossCutting.csproj" />
-    <ProjectReference Include="..\Domain\Fatec.Store.User.Domain.csproj" />
-    <ProjectReference Include="..\Infrastructure\Fatec.Store.User.Infrastructure.Data.csproj" />
+    <ProjectReference Include="..\CrossCutting\Store.CrossCutting.csproj" />
+    <ProjectReference Include="..\Domain\Store.Domain.csproj" />
+    <ProjectReference Include="..\Infrastructure\Store.Data.csproj" />
   </ItemGroup>
 
 </Project>
