--- a/src/3..Domain/Store.Domain.csproj
+++ b/src/3..Domain/Store.Domain.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>Fatec.Store.User.Domain</RootNamespace>
+    <RootNamespace>Store.Domain</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
