--- a/src/2.Application/Store.Application.csproj
+++ b/src/2.Application/Store.Application.csproj
@@ -19,9 +19,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CrossCutting\Store.CrossCutting.csproj" />
-    <ProjectReference Include="..\Domain\Store.Domain.csproj" />
-    <ProjectReference Include="..\Infrastructure\Store.Data.csproj" />
+    <ProjectReference Include="..\3..Domain\Store.Domain.csproj" />
+    <ProjectReference Include="..\4.Data\Store.Data.csproj" />
+    <ProjectReference Include="..\5.CrossCutting\Store.CrossCutting.csproj" />
   </ItemGroup>
 
 </Project>
