--- a/src/4.Data/Store.Data.csproj
+++ b/src/4.Data/Store.Data.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\3..Domain\Store.Domain.csproj" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.6" />
   </ItemGroup>
 
 </Project>
