--- a/src/3..Domain/Store.Domain.csproj
+++ b/src/3..Domain/Store.Domain.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Fatec.Store.Framework.Core" Version="8.0.3" />
+    <PackageReference Include="Store.Framework.Core" Version="8.0.4" />
   </ItemGroup>
 
 </Project>
