ajustado aplicação para conter refatoração de framework

--- a/src/1.Api/appsettings.json
+++ b/src/1.Api/appsettings.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AppsettingsConfigurations": {
+  "AppSettings": {
     "EmailConfiguration": {
       "EmailTemplates": [
         {
