--- a/src/3..Domain/Store.Domain.csproj
+++ b/src/3..Domain/Store.Domain.csproj
@@ -8,7 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Store.Framework.Core" Version="8.0.4" />
+    <ProjectReference Include="..\..\..\Store.Framework.Core\src\Store.Framework.Core.csproj" />
   </ItemGroup>
+
+  <!--<ItemGroup>
+    <PackageReference Include="Store.Framework.Core" Version="8.0.4" />
+  </ItemGroup>-->
 
 </Project>
