Adicionado implementado ajustes realizados no Framework

--- a/src/1.Api/appsettings.json
+++ b/src/1.Api/appsettings.json
@@ -2,10 +2,15 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information"
     }
   },
   "AppSettings": {
+    "SwaggerSettings": {
+      "Title": "Store.Api",
+      "Version": "v1",
+      "Description": "Api responsável pelo gerenciamento de pedidos."
+    },
     "EmailConfiguration": {
       "EmailTemplates": [
         {
