--- a/src/3..Domain/Store.Domain.csproj
+++ b/src/3..Domain/Store.Domain.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Store.Framework.Core\src\Store.Framework.Core.csproj" />
+    <ProjectReference Include="..\..\..\Projects.Framework.Core\src\Project.Framework.Core.csproj" />
   </ItemGroup>
 
   <!--<ItemGroup>
