--- a/src/1.Api/appsettings.json
+++ b/src/1.Api/appsettings.json
@@ -38,7 +38,7 @@
       "Server": "127.0.0.1,6379",
       "ExpirationInMinutes": 60
     },
-    "Database": "Data Source=127.0.0.1,1433;Initial Catalog=Store;User ID=SA;Password=*SQLestudo2024;Encrypt=False;TrustServerCertificate=False;Connection Timeout=30;"
+    "Database": "Server=127.0.0.1,1433;Initial Catalog=Store;User ID=SA;Password=*SQLestudo2024;Encrypt=False;TrustServerCertificate=True;Connection Timeout=30;"
   },
   "AllowedHosts": "*"
 }
