--- a/src/3..Domain/Store.Domain.csproj
+++ b/src/3..Domain/Store.Domain.csproj
@@ -5,6 +5,8 @@
     <RootNamespace>Store.Domain</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <DocumentationFile>/bin/Store.Domain.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
